Fix for panel title header misalignment in IE10

--- a/preproduction.giving.sg/files/custom.css
+++ b/preproduction.giving.sg/files/custom.css
@@ -1903,6 +1903,10 @@ border: 1px solid #ccc !important;
 .dashboard-wrapper.volunteer-contact{
 	overflow-x:scroll; 
 }
+.dashboard .panel-title span{
+	clear: both !important;
+}
+
 
 
 @media (max-width: 979px){
